--- a/CheckServiceStatus/CheckServiceStatus.csproj
+++ b/CheckServiceStatus/CheckServiceStatus.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <!-- dotnet publish -c release -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <SelfContained>true</SelfContained>
+
   </PropertyGroup>
 
   <ItemGroup>
