improve the scan logging

--- a/CheckServiceStatus/CheckServiceStatus.csproj
+++ b/CheckServiceStatus/CheckServiceStatus.csproj
@@ -10,6 +10,7 @@
     <PublishSingleFile>true</PublishSingleFile>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <SelfContained>true</SelfContained>
+    <PlatformTarget>AnyCPU</PlatformTarget>
 
   </PropertyGroup>
 
